# pinger

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  run.sh
.github/workflows/: deploy.yml
pinger/: main.py  test_main.py
